public abstract class number {
    //must be able to convertToDec
    public abstract double convertToDec();
    //must have a toString()
    public abstract String toString();

}
