public abstract class numericCalculator {

    //add method
    public abstract number add();
    //sub method
    public abstract number sub();
    //mult method
    public abstract number mult();
    //div method
    public abstract number div();
    //toString() method
    public abstract String toString();

}
