@startuml

title __PROGRAMMINA3's Class Diagram__\n

  namespace  {
    class bandCalc {
    }
  }
  

  namespace  {
    class bigIntCalculator {
    }
  }
  

  namespace  {
    class bigIntMenu {
    }
  }
  

  namespace  {
    class bigIntNum {
    }
  }
  

  namespace  {
    class binMenu {
    }
  }
  

  namespace  {
    class binToDec {
    }
  }
  

  namespace  {
    class binaryCalculator {
    }
  }
  

  namespace  {
    class binaryNum {
    }
  }
  

  namespace  {
    class decMenu {
    }
  }
  

  namespace  {
    class decNum {
    }
  }
  

  namespace  {
    class decToBin {
    }
  }
  

  namespace  {
    class decToHex {
    }
  }
  

  namespace  {
    class decimalCalculator {
    }
  }
  

  namespace  {
    class hexMenu {
    }
  }
  

  namespace  {
    class hexNum {
    }
  }
  

  namespace  {
    class hexToDec {
    }
  }
  

  namespace  {
    class hexadecimalCalculator {
    }
  }
  

  namespace  {
    class main {
    }
  }
  

  namespace  {
    abstract class number {
    }
  }
  

  namespace  {
    abstract class numericCalculator {
    }
  }
  

  bigIntCalculator -up-|> numericCalculator
  bigIntCalculator o-- number : a
  bigIntCalculator o-- number : b
  bigIntNum -up-|> number
  binaryCalculator -up-|> numericCalculator
  binaryCalculator o-- number : a
  binaryCalculator o-- number : b
  binaryCalculator o-- binaryNum : remainder
  binaryNum -up-|> number
  decNum -up-|> number
  decimalCalculator -up-|> numericCalculator
  decimalCalculator o-- number : a
  decimalCalculator o-- number : b
  hexNum -up-|> number
  hexadecimalCalculator -up-|> numericCalculator
  hexadecimalCalculator o-- number : a
  hexadecimalCalculator o-- number : b
  hexadecimalCalculator o-- hexNum : remainder


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
